[gd_scene load_steps=5 format=3 uid="uid://dscw6cfkblva7"]

[ext_resource type="PackedScene" uid="uid://disjjplik7m85" path="res://components/clickable/Clickable.tscn" id="1_3mm8m"]
[ext_resource type="Script" path="res://scenes/map/map.gd" id="1_bve3w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6tl2x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i4h8t"]

[node name="Map" type="Node2D"]
script = ExtResource("1_bve3w")

[node name="ShipSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(320, 300)

[node name="Area2D" type="Area2D" parent="ShipSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipSprite/Area2D"]
shape = SubResource("RectangleShape2D_6tl2x")
debug_color = Color(1, 0, 0, 0.419608)

[node name="Island0Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(320, 220)

[node name="Clickable" parent="Island0Sprite" instance=ExtResource("1_3mm8m")]

[node name="Area2D" type="Area2D" parent="Island0Sprite/Clickable"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Island0Sprite/Clickable/Area2D"]
shape = SubResource("CircleShape2D_i4h8t")

[node name="Island1Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(320, 140)

[node name="Clickable" parent="Island1Sprite" instance=ExtResource("1_3mm8m")]

[node name="Area2D" type="Area2D" parent="Island1Sprite/Clickable"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Island1Sprite/Clickable/Area2D"]
shape = SubResource("CircleShape2D_i4h8t")

[node name="Island2Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(320, 60)
scale = Vector2(2, 2)

[node name="Clickable" parent="Island2Sprite" instance=ExtResource("1_3mm8m")]

[node name="Area2D" type="Area2D" parent="Island2Sprite/Clickable"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Island2Sprite/Clickable/Area2D"]
shape = SubResource("CircleShape2D_i4h8t")

[connection signal="area_entered" from="ShipSprite/Area2D" to="." method="_on_island_entered"]
[connection signal="click" from="Island0Sprite/Clickable" to="." method="_on_island_clicked" binds= [0]]
[connection signal="click" from="Island1Sprite/Clickable" to="." method="_on_island_clicked" binds= [1]]
[connection signal="click" from="Island2Sprite/Clickable" to="." method="_on_island_clicked" binds= [2]]
